Bug 1792115 - Avoid a double lock in DeviceManagerDx::MaybeResetAndReacquireDevices. r=gfx-reviewers,bradwerth

Differential Revision: https://phabricator.services.mozilla.com/D159200